language/move-prover/tests/sources/functional/hash_model.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/hash_model.move:48:9 ───
    │
 48 │         ensures len(result_1) > 0 ==> result_1[0] < max_u8(); // should be <=
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/hash_model.move:39:5: hash_test1_incorrect (entry)
    =     at tests/sources/functional/hash_model.move:41:24: hash_test1_incorrect
    =         v1 = <redacted>,
    =         v2 = <redacted>,
    =         h1 = <redacted>
    =     at tests/sources/functional/hash_model.move:42:33: hash_test1_incorrect
    =         h2 = <redacted>
    =     at tests/sources/functional/hash_model.move:43:10: hash_test1_incorrect
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/hash_model.move:39:5: hash_test1_incorrect (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/hash_model.move:91:9 ───
    │
 91 │         ensures len(result_1) > 0 ==> result_1[0] < max_u8();
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/hash_model.move:82:5: hash_test2_incorrect (entry)
    =     at tests/sources/functional/hash_model.move:84:24: hash_test2_incorrect
    =         v1 = <redacted>,
    =         v2 = <redacted>,
    =         h1 = <redacted>
    =     at tests/sources/functional/hash_model.move:85:33: hash_test2_incorrect
    =         h2 = <redacted>
    =     at tests/sources/functional/hash_model.move:86:10: hash_test2_incorrect
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/hash_model.move:82:5: hash_test2_incorrect (exit)
